refactor: restructure requests and isolate Dashboard controllers for Web/API (14-16)
