# routes/api.php
@@ -1,9 +1,9 @@
 <?php
 
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\Dashboard\NewsController as DashboardNewsController;
 use App\Http\Controllers\Api\ProfileController;
 use App\Http\Controllers\Api\PublicNewsController;
-use App\Http\Controllers\Api\UserNewsController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('/register', [AuthController::class, 'register']);
@@ -19,8 +19,5 @@ Route::middleware(['auth:sanctum'])->group(function () {
     Route::get('/profiles/me', [ProfileController::class, 'show']);
     Route::put('/profiles/me', [ProfileController::class, 'update']);
 
-    Route::apiResource('users/me/news', UserNewsController::class)->parameters([
-
-        'news' => 'my_news',
-    ]);
+    Route::apiResource('dashboard/news', DashboardNewsController::class);
 });
